# KiteEnergySystems

./: CMakeLists.txt  LICENSE  README.md
kite_controller/app/: kite_controller_app.cc
kite_dynamics/: CMakeLists.txt
kite_dynamics/app/: kite_dynamics_app.cc
kite_dynamics/inc/: KiteDynamicsManager.h  KiteDynamicsManager.hh
kite_dynamics/inc/utils/: KiteState.h  Quaternion.h
kite_dynamics/src/: KiteDynamicsManager.cc
kite_dynamics/src/utils/: KiteState.cc  Quaternion.cc
kite_dynamics/test/: EigenTest.cc
scripts/: definitions.sh
